--- a/Turnstile Data.ipynb
+++ b/Turnstile Data.ipynb
@@ -396,10 +396,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df.loc[:, 'ENTRIES'] = diff_df['ENTRIES'].values\n",
@@ -408,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +431,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>C/A</th>\n",
-       "      <th>DATE</th>\n",
        "      <th>DESC</th>\n",
        "      <th>DIVISION</th>\n",
        "      <th>ENTRIES</th>\n",
@@ -441,134 +438,119 @@
        "      <th>LINENAME</th>\n",
        "      <th>SCP</th>\n",
        "      <th>STATION</th>\n",
-       "      <th>TIME</th>\n",
        "      <th>UNIT</th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>DATETIME</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4717930</th>\n",
-       "      <td>A050</td>\n",
-       "      <td>06/10/2017</td>\n",
-       "      <td>REGULAR</td>\n",
-       "      <td>BMT</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>RNW</td>\n",
-       "      <td>00-03-00</td>\n",
-       "      <td>CORTLANDT ST</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>R088</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017-06-10 05:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2227373</th>\n",
-       "      <td>N330C</td>\n",
-       "      <td>03/16/2017</td>\n",
+       "      <th>1260289</th>\n",
+       "      <td>N509</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>IND</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>MR</td>\n",
-       "      <td>01-04-00</td>\n",
-       "      <td>63 DR-REGO PARK</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>R202</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017-03-16 04:00:00</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>FM</td>\n",
+       "      <td>00-00-01</td>\n",
+       "      <td>23 ST</td>\n",
+       "      <td>R203</td>\n",
+       "      <td>2017-02-05 19:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4640330</th>\n",
-       "      <td>R133</td>\n",
-       "      <td>06/09/2017</td>\n",
+       "      <th>1986845</th>\n",
+       "      <td>J009</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>BMT</td>\n",
+       "      <td>508.0</td>\n",
+       "      <td>466.0</td>\n",
+       "      <td>JMZ</td>\n",
+       "      <td>00-00-01</td>\n",
+       "      <td>MYRTLE AV</td>\n",
+       "      <td>R378</td>\n",
+       "      <td>2017-03-04 16:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3308711</th>\n",
+       "      <td>R422</td>\n",
        "      <td>REGULAR</td>\n",
        "      <td>IRT</td>\n",
-       "      <td>690.0</td>\n",
-       "      <td>124.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>00-00-01</td>\n",
-       "      <td>28 ST</td>\n",
-       "      <td>13:00:00</td>\n",
-       "      <td>R272</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017-06-09 13:00:00</td>\n",
+       "      <td>492.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>00-00-00</td>\n",
+       "      <td>BUHRE AV</td>\n",
+       "      <td>R428</td>\n",
+       "      <td>2017-04-19 05:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2549882</th>\n",
-       "      <td>A083</td>\n",
-       "      <td>03/27/2017</td>\n",
+       "      <th>2214721</th>\n",
+       "      <td>N196</td>\n",
        "      <td>REGULAR</td>\n",
-       "      <td>BMT</td>\n",
+       "      <td>IND</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>174.0</td>\n",
-       "      <td>JZ</td>\n",
-       "      <td>00-00-02</td>\n",
-       "      <td>BROAD ST</td>\n",
-       "      <td>05:00:00</td>\n",
-       "      <td>R125</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017-03-27 05:00:00</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>00-00-00</td>\n",
+       "      <td>FAR ROCKAWAY</td>\n",
+       "      <td>R285</td>\n",
+       "      <td>2017-03-14 16:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1567486</th>\n",
-       "      <td>A081</td>\n",
-       "      <td>02/22/2017</td>\n",
+       "      <th>3249940</th>\n",
+       "      <td>PTH09</td>\n",
        "      <td>REGULAR</td>\n",
-       "      <td>BMT</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>ACJZ2345</td>\n",
-       "      <td>04-00-00</td>\n",
-       "      <td>FULTON ST</td>\n",
-       "      <td>02:00:00</td>\n",
-       "      <td>R028</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017-02-22 02:00:00</td>\n",
+       "      <td>PTH</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00-00-03</td>\n",
+       "      <td>CHRISTOPHER ST</td>\n",
+       "      <td>R548</td>\n",
+       "      <td>2017-04-21 18:08:52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           C/A        DATE     DESC DIVISION  ENTRIES  \\\n",
-       "4717930   A050  06/10/2017  REGULAR      BMT      2.0   \n",
-       "2227373  N330C  03/16/2017  REGULAR      IND      0.0   \n",
-       "4640330   R133  06/09/2017  REGULAR      IRT    690.0   \n",
-       "2549882   A083  03/27/2017  REGULAR      BMT      7.0   \n",
-       "1567486   A081  02/22/2017  REGULAR      BMT      2.0   \n",
+       "           C/A     DESC DIVISION  ENTRIES  \\\n",
+       "1260289   N509  REGULAR      IND    173.0   \n",
+       "1986845   J009  REGULAR      BMT    508.0   \n",
+       "3308711   R422  REGULAR      IRT    492.0   \n",
+       "2214721   N196  REGULAR      IND      7.0   \n",
+       "3249940  PTH09  REGULAR      PTH    167.0   \n",
        "\n",
        "         EXITS                                                                 \\\n",
-       "4717930                                               12.0                      \n",
-       "2227373                                                0.0                      \n",
-       "4640330                                              124.0                      \n",
-       "2549882                                              174.0                      \n",
-       "1567486                                                8.0                      \n",
+       "1260289                                               52.0                      \n",
+       "1986845                                              466.0                      \n",
+       "3308711                                              159.0                      \n",
+       "2214721                                                7.0                      \n",
+       "3249940                                               92.0                      \n",
        "\n",
-       "         LINENAME       SCP          STATION      TIME  UNIT Unnamed: 0  \\\n",
-       "4717930       RNW  00-03-00     CORTLANDT ST  05:00:00  R088        NaN   \n",
-       "2227373        MR  01-04-00  63 DR-REGO PARK  04:00:00  R202        NaN   \n",
-       "4640330         1  00-00-01            28 ST  13:00:00  R272        NaN   \n",
-       "2549882        JZ  00-00-02         BROAD ST  05:00:00  R125        NaN   \n",
-       "1567486  ACJZ2345  04-00-00        FULTON ST  02:00:00  R028        NaN   \n",
-       "\n",
-       "                   DATETIME  \n",
-       "4717930 2017-06-10 05:00:00  \n",
-       "2227373 2017-03-16 04:00:00  \n",
-       "4640330 2017-06-09 13:00:00  \n",
-       "2549882 2017-03-27 05:00:00  \n",
-       "1567486 2017-02-22 02:00:00  "
+       "        LINENAME       SCP         STATION  UNIT            DATETIME  \n",
+       "1260289       FM  00-00-01           23 ST  R203 2017-02-05 19:00:00  \n",
+       "1986845      JMZ  00-00-01       MYRTLE AV  R378 2017-03-04 16:00:00  \n",
+       "3308711        6  00-00-00        BUHRE AV  R428 2017-04-19 05:00:00  \n",
+       "2214721        A  00-00-00    FAR ROCKAWAY  R285 2017-03-14 16:00:00  \n",
+       "3249940        1  00-00-03  CHRISTOPHER ST  R548 2017-04-21 18:08:52  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('./data/ts_merged_2017.csv')"
    ]
   },
   {
@@ -587,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -610,11 +592,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "grouped_station = df.groupby(['STATION','DATETIME'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby('STATION').apply(np.mean)"
+    "avg_station_time = grouped_station.apply(np.mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_station_time.to_csv('./clean_data/ridership_by_station_2017.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "avg_station_time.plot(kind='line',\n",
+    "                      figsize=(20,10))"
    ]
   },
   {
@@ -762,6 +776,25 @@
    "source": [
     "len(entries_all)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Further Steps\n",
+    "* Linear Regression with Ridership vs. Precipitation\n",
+    "* Use Latitude/Longitude for more accurate precipitation impact assessment\n",
+    "* Create a more advanced model to predict ridership impact of precipitation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
