cleaned up directory

--- a/Conclusions.ipynb
+++ b/Conclusions.ipynb
@@ -13,9 +13,18 @@
    "source": [
     "The associated github repository, including all *iPython* Notebooks created to clean and organize the data, can be found [here](https://github.com/rezaisrad/nyc_mta).\n",
     "\n",
+    "### Steps:\n",
+    "1. Find average turnstile use per subway station over time (Notebook [here](https://github.com/rezaisrad/nyc_mta/blob/master/Turnstile%20Data.ipynb))\n",
+    "2. Find matching precipitation data (Notebook [here](https://github.com/rezaisrad/nyc_mta/blob/master/Weather%20Data.ipynb))\n",
+    "3. Find station longitude and latitude (Notebook [here](https://github.com/rezaisrad/nyc_mta/blob/master/Station%20Location.ipynb))\n",
+    "4. Merge Data into one table\n",
+    "(Notebook [here](https://github.com/rezaisrad/nyc_mta/blob/master/Merging%20Tables.ipynb))\n",
+    "5. Look for any relationship between ridership and precipitation (Notebook [here](https://github.com/rezaisrad/nyc_mta/blob/master/Data%20Analysis%20-%20Linear%20Regression.ipynb)) \n",
+    "6. Draw conclusions (Notebook [here](https://github.com/rezaisrad/nyc_mta/blob/master/Conclusions.ipynb)) \n",
+    "\n",
     "**Null Hypothesis:** Precipitation has a statistically signficant impact on MTA subway ridership.\n",
     "\n",
-    "**Alternate Hypothesis:** Precipitation does not have a statistically signficant impact on MTA subway ridership.\n"
+    "**Alternate Hypothesis:** Precipitation does not have a statistically signficant impact on MTA subway ridership."
    ]
   },
   {
@@ -62,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv('./clean_data/precip_ridership_by_day_hour.csv')"
@@ -91,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.loc[df['HOURLYPrecip'] == 0, 'PRECIP_LEVEL'] = 0\n",
@@ -185,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_bool = df[['ENTRIES','EXITS','PRECIP_B']]"
@@ -235,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['DATETIME'] = df['DAYOFYEAR'] + df['HOUROFDAY'].apply(lambda x: (x/24.0))"
@@ -244,7 +261,9 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_final = df[['DATETIME', 'ENTRIES', 'EXITS', 'HOURLYPrecip']]\n",
@@ -261,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "precip = df_final.loc[df_final['HOURLYPrecip'] > 0]"
